<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/info_bar"
        android:title="@string/info_bar"
        android:visible="false"
        android:icon="@drawable/ic_dev"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/party_config"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_party"
        android:title="@string/party_config"/>

    <item
        android:id="@+id/locations"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_locations"
        android:title="@string/locations"/>

    <item
        android:id="@+id/add_location"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_locations_add"
        android:title="@string/add_location"/>

    <item
        android:id="@+id/upload_locations"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_locations_add"
        android:visible="false"
        android:title="@string/upload_locations"/>

</menu>